--- a/gnome-shell/src/gnome-shell-sass/_drawing.scss
+++ b/gnome-shell/src/gnome-shell-sass/_drawing.scss
@@ -2,186 +2,217 @@
 
 // generic drawing of more complex things
 
-// @function _widget_edge($c:$borders_edge) {
-// outer highlight "used" on most widgets
-//   @return 0 1px $c;
-// }
-
-// provide font size in rem, with px fallback
-@mixin fontsize($size: 24, $base: 16) {
-  font-size: round($size) + pt;
-  //font-size: ($size / $base) * 1rem;
-}
-
-@mixin _shadows($shadow1, $shadow2:none, $shadow3:none, $shadow4:none) {
-//
-// Helper function to stack up to 4 box-shadows;
-//
-  @if $shadow4!=none { box-shadow: $shadow1, $shadow2, $shadow3, $shadow4; }
-  @else if $shadow3!=none { box-shadow: $shadow1, $shadow2, $shadow3; }
-  @else if $shadow2!=none { box-shadow: $shadow1, $shadow2; }
-  @else { box-shadow: $shadow1; }
-}
-
-// entries
-
-@mixin entry($t, $tc: $fg_color, $c: $base_color, $fc:$selected_bg_color) {
-//
-// Entries drawing function
-//
-// $t: entry type
-// $tc: text color
-// $c: background color
-// $fc: focus color
-//
-// possible $t values:
-// normal, focus, insensitive
-//
-
-  @if $t==normal {
-    color: $tc;
-    background-color: $c;
-    border-color: if($c != $base_color, if($c == $light_base_color, $light_borders_color, border_color($c)), $borders_color);
-    box-shadow: none;
+@function _widget_edge($c:$borders_edge) {
+  // outer highlight "used" on most widgets
+    @return 0 1px $c;
   }
-  @if $t==focus {
-    color: $tc;
-    border-color: $fc;
-    box-shadow: none;
+  
+  // provide font size in rem, with px fallback
+  @mixin fontsize($size: 24, $base: 16) {
+    font-size: round($size) + pt;
+    //font-size: ($size / $base) * 1rem;
   }
-  @if $t==insensitive {
-    $_bg: transparentize(mix($insensitive_fg_color,$c,20%),0.3); // transparentize(mix($insensitive_fg_color,$osd_bg_color,20%),0.3);
-    color: $insensitive_fg_color;
-    background-color: $_bg;
-    border-color: $insensitive_bg_color;
-    box-shadow: none;
-  }
-}
-
-// buttons
-
-@function _border_color($c, $darker: false) {
-  @if $darker == true {
-    @if lightness($c)<30% { @return darken($c, 20%); }
-    @else { @return darken($c, 10%); }
-  }
-  @else {
-    @if lightness($c)<30% { @return darken($c, 15%); }
-    @else { @return darken($c, 5%); }
-  }
-}
-
-// @function _text_shadow_color ($tc:$fg_color, $bg:$bg_color) {
-//
-// calculate the color of text shadows
-//
-// $tc is the text color
-// $bg is the background color
-//
-//   $_lbg: lightness($bg)/100%;
-//   @if lightness($tc)<50% { @return transparentize(white,1-$_lbg/($_lbg*1.3)); }
-//   @else { @return transparentize(black,$_lbg*0.8); }
-// }
-
-@function _button_hilight_color($c) {
-
-// calculate the right hilight color for buttons
-  @if lightness($c)>35% { @return transparentize(black, 0.4); }
-  @else { @return transparentize(white, 0.85);}
-}
-
-// @mixin _button_text_shadow ($tc:$fg_color, $bg:$bg_color) {
-//
-// helper function for the text emboss effect
-//
-// $tc is the optional text color, not the shadow color
-//
-// TODO: this functions needs a way to deal with special cases
-//
-//
-//   $_shadow: _text_shadow_color($tc, $bg);
-//
-//   @if lightness($tc)<50% {
-//     text-shadow: 0 1px $_shadow;
-//     icon-shadow: 0 1px $_shadow;
-//   }
-//   @else {
-//     text-shadow: 0 -1px $_shadow;
-//     icon-shadow: 0 -1px $_shadow;
-//   }
-// }
-
-@mixin button($t, $c:$button_bg_color, $tc:$osd_fg_color) {
-//
-// Button drawing function
-//
-// $t:    button type,
-// $c:    base button color for colored* types
-// $tc:   optional text color for colored* types
-//
-// possible $t values:
-// normal, hover, active, focus, insensitive, undecorated
-//
-
-  $_hilight_color: _button_hilight_color($c);
-  transition-duration: 200ms;
-
-  @if $t==normal {
-  // normal button
-    background-color: $c;
-    border-color: _border_color($c);
-    // box-shadow: inset 0 -1px 0 0 $_hilight_color;
-    color: $tc;
-    icon-shadow: none;
-    text-shadow: none;
-  }
-
-  @if $t==focus {
-  // focused button
-    box-shadow: inset 0px 0px 0px 1px if($c!=$success_color, $selected_bg_color, white);
-  }
-
-  @else if $t==hover {
-  // active osd button
-    background-color: lighten($c, 10%);
-  }
-
-  @else if $t==focus-hover {
-  // active osd button
-    background-color: lighten($c, 10%);
-    // box-shadow: inset 0px 0px 0px 1px $selected_bg_color;
-  }
-  @else if $t==active {
-  // active osd button
-    box-shadow: none;
-  }
-  @else if $t==insensitive {
-  // insensitive osd button
+  
+  @mixin _shadows($shadow1, $shadow2:none, $shadow3:none, $shadow4:none) {
   //
-    $_bg: transparentize(mix($insensitive_fg_color,$c,20%),0.3); // transparentize(mix($insensitive_fg_color,$osd_bg_color,20%),0.3);
+  // Helper function to stack up to 4 box-shadows;
+  //
+    @if $shadow4!=none { box-shadow: $shadow1, $shadow2, $shadow3, $shadow4; }
+    @else if $shadow3!=none { box-shadow: $shadow1, $shadow2, $shadow3; }
+    @else if $shadow2!=none { box-shadow: $shadow1, $shadow2; }
+    @else { box-shadow: $shadow1; }
+  }
+  
+  // entries
+  
+  @mixin entry($t, $fc:$selected_bg_color, $edge: $borders_edge) {
+  //
+  // Entries drawing function
+  //
+  // $t: entry type
+  // $fc: focus color
+  // $edge: set to none to not draw the bottom edge or specify a color to not
+  //        use the default one
+  //
+  // possible $t values:
+  // normal, focus, insensitive
+  //
 
-    color: if($c != $c, mix($tc, $c, 50%), $insensitive_fg_color);
-    border-color: _border_color($c);
-    background-color: $_bg;
-    box-shadow: none;
-    text-shadow: none;
-    icon-shadow: none;
-
-    @if $c==$success_color {
-      $_bg: darken($c, 20%);
-      background-color: $_bg;
-      border-color: $_bg;
-      color: transparentize(white, 0.5)
+    @if $t==normal {
+      background-color: $base_color;
+      border-color: $osd_outer_borders_color;
+  
+    }
+    @if $t==focus {
+      border-color: if($fc==$selected_bg_color,
+                       $selected_borders_color,
+                       darken($fc,35%));
+    }
+    @if $t==hover { }
+    @if $t==insensitive {
+      color: $insensitive_fg_color;
+      border-color: $insensitive_bg_color;
+      box-shadow: none;
     }
   }
-  @else if $t==undecorated {
-  // reset
+  
+  // buttons
+  
+  @function _border_color ($c) { @return darken($c,25%); } // colored buttons want
+                                                           // the border form the
+                                                           // base color
+  
+  @function _text_shadow_color ($tc:$fg_color, $bg:$bg_color) {
   //
-    border-color: transparent;
-    background-color: transparent;
-    background-image: none;
-    box-shadow: none;
-    text-shadow: none;
-    icon-shadow: none;
+  // calculate the color of text shadows
+  //
+  // $tc is the text color
+  // $bg is the background color
+  //
+    $_lbg: lightness($bg)/100%;
+    @if lightness($tc)<50% { @return transparentize(white,1-$_lbg/($_lbg*1.3)); }
+    @else { @return transparentize(black,$_lbg*0.8); }
   }
-}
+  
+  @function _button_hilight_color($c) {
+  //
+  // calculate the right top hilight color for buttons
+  //
+  // $c: base color;
+  //
+    @if lightness($c)>90% { @return white; }
+    @else if lightness($c)>80% { @return transparentize(white, 0.3); }
+    @else if lightness($c)>50% { @return transparentize(white, 0.5); }
+    @else if lightness($c)>40% { @return transparentize(white, 0.7); }
+    @else { @return transparentize(white, 0.9); }
+  }
+  
+  @mixin _button_text_shadow ($tc:$fg_color, $bg:$bg_color) {
+  //
+  // helper function for the text emboss effect
+  //
+  // $tc is the optional text color, not the shadow color
+  //
+  // TODO: this functions needs a way to deal with special cases
+  //
+  
+    $_shadow: _text_shadow_color($tc, $bg);
+  
+    @if lightness($tc)<50% {
+      text-shadow: 0 1px $_shadow;
+      icon-shadow: 0 1px $_shadow;
+    }
+    @else {
+      text-shadow: 0 -1px $_shadow;
+      icon-shadow: 0 -1px $_shadow;
+    }
+  }
+  
+  @mixin button($t, $c:$osd_bg_color, $tc:$fg_color, $edge: $borders_edge) {
+  //
+  // Button drawing function
+  //
+  // $t:    button type,
+  // $c:    base button color for colored* types
+  // $tc:   optional text color for colored* types
+  // $edge: set to none to not draw the bottom edge or specify a color to not
+  //        use the default one
+  //
+  // possible $t values:
+  // normal, hover, active, insensitive, insensitive-active,
+  // backdrop, backdrop-active, backdrop-insensitive, backdrop-insensitive-active,
+  // osd, osd-hover, osd-active, osd-insensitive, osd-backdrop, undecorated
+  //
+  
+    $_hilight_color: _button_hilight_color($c);
+    $_button_edge: if($edge == none, none, _widget_edge($edge));
+    $_blank_edge: if($edge == none, none, _widget_edge(transparentize($edge,1)));
+  
+  
+    @if $t==normal {
+    //
+    // normal button
+    //
+      $_bg: if($c!=$osd_bg_color, transparentize($c, 0.5),
+                              $osd_bg_color);
+  
+      color: $osd_fg_color;
+      background-color: $_bg;
+      border-color: $osd_borders_color;
+      box-shadow: inset 0 1px lighten($osd_bg_color,10%);
+      text-shadow: 0 1px black;
+      icon-shadow: 0 1px black;
+    }
+    @if $t==focus {
+    //
+    // focused button
+    //
+      $_bg: if($c!=$osd_bg_color, transparentize($c, 0.3),
+                            lighten($osd_bg_color,3%));
+  
+      color: $osd_fg_color;
+      text-shadow: 0 1px black;
+      icon-shadow: 0 1px black;
+      box-shadow: inset 0px 0px 0px 1px $selected_bg_color;
+    }
+  
+    @else if $t==hover {
+    //
+    // active osd button
+    //
+      $_bg: if($c!=$osd_bg_color, transparentize($c, 0.3),
+                              lighten($osd_bg_color,3%));
+  
+      color: white;
+      border-color: $osd_borders_color;
+      background-color: $_bg;
+      box-shadow: inset 0 1px lighten($osd_bg_color,20%);
+      text-shadow: 0 1px black;
+      icon-shadow: 0 1px black;
+  
+    }
+    @else if $t==active {
+    //
+    // active osd button
+    //
+      $_bg: if($c!=$bg_color, $c, $osd_borders_color);
+  
+      color: white;
+      border-color: $osd_borders_color;
+      background-color: $selected_bg_color;
+      // This should be none, but it's creating some issues with borders, so to
+      // workaround it for now, use inset wich goes through a different code path.
+      // see https://bugzilla.gnome.org/show_bug.cgi?id=752934
+      box-shadow: inset 0 0 black;
+      text-shadow: none;
+      icon-shadow: none;
+    }
+    @else if $t==insensitive {
+    //
+    // insensitive osd button
+    //
+      $_bg: transparentize(mix($insensitive_fg_color,$osd_bg_color,20%),0.3);
+  
+      color: $insensitive_fg_color;
+      border-color: $osd_borders_color;
+      background-color: $_bg;
+      box-shadow: none;
+      text-shadow: none;
+      icon-shadow: none;
+    }
+    @else if $t==undecorated {
+    //
+    // reset
+    //
+      border-color: transparent;
+      background-color: transparent;
+      background-image: none;
+  
+      @include _shadows(inset 0 1px transparentize(white,1),
+                        $_blank_edge);
+  
+      text-shadow: none;
+      icon-shadow: none;
+    }
+  }
+  
