--- a/gnome-shell/src/gnome-shell-sass/_colors.scss
+++ b/gnome-shell/src/gnome-shell-sass/_colors.scss
@@ -23,7 +23,7 @@ $destructive_color: if($variant == 'light', #e01b24, darken(#e01b24, 10%));
 $osd_fg_color: #eeeeec;
 $osd_bg_color: transparentize($bg_color, 0.02);
 $osd_borders_color: transparentize(black, 0.3);
-$osd_outer_borders_color: transparentize(white, 0.87);
+$osd_outer_borders_color: #3d3d3d;
 
 $tooltip_borders_color: $osd_outer_borders_color;
 
