--- a/gnome-shell/src/gnome-shell-sass/_colors.scss
+++ b/gnome-shell/src/gnome-shell-sass/_colors.scss
@@ -27,6 +27,13 @@ $osd_outer_borders_color: #3d3d3d;
 
 $tooltip_borders_color: $osd_outer_borders_color;
 
+$bubble_bg_color: darken(white, 4%);
+$bubble_fg_color: darken(#2e3436, 7%);
+$bubble_borders_color: transparentize($bubble_fg_color, 0.75);
+$bubble_outer_borders_color: transparentize(black, 0.6);
+$bubble_hover_bg_color: transparentize($bubble_fg_color, 0.9);
+$bubble_active_bg_color: transparentize($bubble_fg_color, 0.83);
+
 //insensitive state derived colors
 $insensitive_fg_color: mix($fg_color, $bg_color, 50%);
 $insensitive_bg_color: mix($bg_color, $base_color, 60%);
