--- a/gnome-shell/src/gnome-shell-sass/_drawing.scss
+++ b/gnome-shell/src/gnome-shell-sass/_drawing.scss
@@ -183,10 +183,8 @@
     //
     // active osd button
     //
-      $_bg: if($c!=$bg_color, $c, $osd_borders_color);
-  
       color: white;
-      border-color: $osd_borders_color;
+      border-color: if($c==$bubble_bg_color, null, $osd_borders_color);
       background-color: $selected_bg_color;
       // This should be none, but it's creating some issues with borders, so to
       // workaround it for now, use inset wich goes through a different code path.
