--- a/gnome-shell/src/gnome-shell-sass/_common.scss
+++ b/gnome-shell/src/gnome-shell-sass/_common.scss
@@ -234,7 +234,7 @@ StScrollBar {
 /* End Session Dialog */
 .end-session-dialog {
   spacing: 42px;
-  border: 1px solid $osd_outer_borders_color;
+  border: 1px solid $bubble_outer_borders_color;
 }
 
   .end-session-dialog-list {
@@ -350,8 +350,8 @@ StScrollBar {
   }
 
   .mount-dialog-app-list-item {
-    color: darken($fg_color,10%);
-    &:hover { color: $fg_color; }
+    color: lighten($bubble_fg_color,10%);
+    &:hover { color: $bubble_fg_color; }
     &:ltr { padding-right: 1em; }
     &:rtl { padding-left: 1em; }
   }
@@ -369,8 +369,8 @@ StScrollBar {
 /* Password or Authentication Dialog */
 
 .prompt-dialog {
+  @extend %bubble-panel;
   //this is the width of the entire modal popup
-  @extend %bubble-panel; 
   width: 34em;
 
   .message-dialog-main-layout { spacing: 24px; padding: 10px; }
@@ -451,9 +451,10 @@ StScrollBar {
   }
 
   .audio-selection-device {
-    border: 1px solid $osd_outer_borders_color;
+    border: 1px solid $bubble_borders_color;
     border-radius: 12px;
-    &:active,&:hover,&:focus { background-color: $selected_bg_color; }
+    &:hover,&:focus { background-color: $bubble_hover_bg_color; }
+    &:active { background-color: $bubble_active_bg_color; }
   }
 
   .audio-selection-device-box {
@@ -523,11 +524,11 @@ StScrollBar {
     &:ltr { padding: .4em 1.75em .4em 0em; }
     &:rtl { padding: .4em 0em .4em 1.75em; }
     &:checked {
-      background-color: darken($bubble_bg_color,5%);
-      box-shadow: inset 0 1px 0px $bubble_borders_color;
+      background-color: $bubble_bg_color;
+      box-shadow: inset 0 -1px 0px $bubble_borders_color;
       font-weight: bold;
     }
-    &.selected { background-color: transparentize($bubble_fg_color,0.9); color: $bubble_fg_color; }
+    &.selected { background-color: $bubble_hover_bg_color; color: $bubble_fg_color; }
     &:active { background-color: $bubble_active_bg_color; }
     &:insensitive { color: transparentize($bubble_fg_color,.5); }
   }
@@ -715,7 +716,7 @@ StScrollBar {
 %bubble-panel {
   color: $bubble_fg_color;
   background-color: $bubble_bg_color;
-  border: 1px solid $bubble_borders_color;
+  border: 1px solid $bubble_outer_borders_color;
   box-shadow: 0 3px 9px 1px transparentize(black, 0.5); // to match with the notification banner but maybe no?
 
   StEntry {
@@ -725,11 +726,14 @@ StScrollBar {
     box-shadow: none;
   }
   .button {
+    &, &:hover, &:focus, &:active, &:disabled { 
+      box-shadow: none; border-color: $bubble_borders_color;
+    }
     background-color: white;
     color: $bubble_fg_color;
-    border-color: $bubble_borders_color;
-    &:hover { background-color: darken($bubble_bg_color, 12%); }
-    &:active { background-color: darken($bubble_bg_color, 15%); box-shadow: none; }
+    &:hover { background-color: $bubble_hover_bg_color; }
+    &:active { background-color: $bubble_active_bg_color; }
+    &:disabled { color: $insensitive_fg_color; }
   }
 }
 
