--- a/gnome-shell/src/gnome-shell-sass/_common.scss
+++ b/gnome-shell/src/gnome-shell-sass/_common.scss
@@ -51,7 +51,7 @@ stage {
   &:active { @include button(active); }
 }
 
-.modal-dialog-linked-button, %notification_button {
+.modal-dialog-linked-button, %bubble_button {
   border-right-width: 1px;
   @include button(normal, $c:$bubble_bg_color, $tc:$bubble_fg_color);
   &:insensitive { @include button(insensitive, $c:$bubble_bg_color, $tc:$bubble_fg_color); }
@@ -375,7 +375,7 @@ StScrollBar {
 
   .message-dialog-main-layout { spacing: 24px; padding: 10px; }
   .message-dialog-content { spacing: 16px; }
-  .message-dialog-title { color: darken($osd_fg_color,25%); }
+  .message-dialog-title { color: lighten($bubble_fg_color,15%); }
 }
 
   .prompt-dialog-description:rtl {
@@ -512,7 +512,6 @@ StScrollBar {
 
   .popup-menu-arrow { } //defined globally in the TOP BAR
   .popup-sub-menu {
-    padding-bottom: 1px;
     background-color: darken($bubble_bg_color,5%);
     box-shadow: inset 0 -1px 0px $bubble_borders_color;
   }
@@ -596,7 +595,7 @@ StScrollBar {
     height: 0.6em;
     -barlevel-height: 0.6em;
     -barlevel-background-color: transparentize(darken($osd_bg_color,15%),0.5);
-    -barlevel-active-background-color: $selected_bg_color;
+    -barlevel-active-background-color: $osd_fg_color;
     -barlevel-overdrive-color: $destructive_color;
     -barlevel-overdrive-separator-width: 0.2em;
   }
@@ -711,6 +710,15 @@ StScrollBar {
   border: 1px solid $osd_outer_borders_color;
   border-radius: 12px;
   padding: 12px;
+  box-shadow: 0 3px 9px 1px transparentize(black, 0.5);
+}
+
+%bubble-entry {
+    color: $bubble_fg_color;
+    background-color: darken($bubble_bg_color, 2%);
+    border-color: $bubble_borders_color;
+    box-shadow: none;
+    &:focus { border: 2px solid $selected_bg_color; }
 }
 
 %bubble-panel {
@@ -719,12 +727,7 @@ StScrollBar {
   border: 1px solid $bubble_outer_borders_color;
   box-shadow: 0 3px 9px 1px transparentize(black, 0.5); // to match with the notification banner but maybe no?
 
-  StEntry {
-    color: $bubble_fg_color;
-    background-color: darken($bubble_bg_color, 5%);
-    border-color: $bubble_borders_color;
-    box-shadow: none;
-  }
+  StEntry { @extend %bubble-entry; }
   .button {
     &, &:hover, &:focus, &:active, &:disabled { 
       box-shadow: none; border-color: $bubble_borders_color;
@@ -1568,10 +1571,7 @@ StScrollBar {
       color: $bubble_fg_color;
     }
 
-    StEntry {
-      background-color: darken($bubble_bg_color, 5%);
-      border-color: $bubble_borders_color;
-    }
+    StEntry { @extend %bubble-entry; }
 
     .notification-icon { padding: 5px; }  
     .notification-content { padding: 5px; spacing: 5px; }
@@ -1583,7 +1583,7 @@ StScrollBar {
       spacing: 0px;
     }
     .notification-button {
-      @extend %notification_button;
+      @extend %bubble_button;
       &:focus { box-shadow: none; }
       &:active { 
         background-color: $bubble_active_bg_color;
@@ -1637,7 +1637,7 @@ StScrollBar {
     padding: 2px 72px 2px 12px;
   }
     .hotplug-notification-item {
-      @extend %notification_button;
+      @extend %bubble_button;
       border: none; box-shadow: none;
       padding: 2px 10px;
       &:focus { padding: 1px 71px 1px 11px; }
