--- a/gnome-shell/src/gnome-shell-sass/_common.scss
+++ b/gnome-shell/src/gnome-shell-sass/_common.scss
@@ -43,6 +43,7 @@ stage {
 .button {
   border-radius: 5px;
   border-width: 1px;
+  min-height: 22px;
   padding: 4px 32px;
   @include button(normal);
   &:focus { @include button(focus); }
@@ -1110,9 +1111,9 @@ StScrollBar {
           .media-message-cover-icon {
             icon-size: 48px !important;
             &.fallback {
-              color: lighten($bg_color,10%);
-              background-color: $bg_color;
-              border: 2px solid $bg_color;
+              color: lighten($bubble_fg_color,10%);
+              background-color: $bubble_bg_color;
+              border: 1px solid $bubble_bg_color;
               border-radius: 2px;
               icon-size: 32px !important;
               padding: 6px; }
@@ -1653,7 +1654,7 @@ StScrollBar {
     .hotplug-resident-mount {
       spacing: 8px;
       border-radius: 4px;
-      &:hover { background-color: transparentize($bg_color,0.7); }
+      &:hover { background-color: $bubble_hover_bg_color; }
     }
 
     .hotplug-resident-mount-label {
@@ -1836,7 +1837,7 @@ StScrollBar {
 
   .modal-dialog-button-box { spacing: 3px; }
   .modal-dialog-button {
-    padding: 3px 18px;
+    padding: 4px 18px;
     &:default {
       @include button(normal,$c:$selected_bg_color);
       &:hover,&:focus { @include button(hover,$c:$selected_bg_color); }
@@ -1927,6 +1928,8 @@ StScrollBar {
 
 //SCREEN SHIELD
 
+$_screenshield_shadow: 0px 0px 6px rgba(0, 0, 0, 0.726);
+
 .screen-shield-arrows {
     padding-bottom: 3em;
 }
@@ -1936,12 +1939,12 @@ StScrollBar {
     width: 80px;
     height: 48px;
     -arrow-thickness: 12px;
-    -arrow-shadow: 0 1px 1px rgba(0,0,0,0.4);
+    -arrow-shadow: $_screenshield_shadow;
 }
 
 .screen-shield-clock {
   color: white;
-  text-shadow: 0px 1px 2px rgba(0,0,0,0.6);
+  text-shadow: $_screenshield_shadow;
   font-weight: bold;
   text-align: center;
   padding-bottom: 1.5em;
@@ -1949,7 +1952,7 @@ StScrollBar {
 
 .screen-shield-clock-time {
   font-size: 72pt;
-  text-shadow: 0px 2px 2px rgba(0,0,0,0.4);
+  text-shadow: $_screenshield_shadow;
   font-feature-settings: "tnum";
 }
 
