--- a/gnome-shell/src/gnome-shell-sass/_colors.scss
+++ b/gnome-shell/src/gnome-shell-sass/_colors.scss
@@ -32,7 +32,8 @@ $bubble_fg_color: darken(#2e3436, 6%);
 $bubble_borders_color: transparentize($bubble_fg_color, 0.75);
 $bubble_outer_borders_color: transparentize(black, 0.6);
 $bubble_hover_bg_color: transparentize($bubble_fg_color, 0.95);
-$bubble_active_bg_color: transparentize($bubble_fg_color, 0.84);
+$bubble_active_bg_color: $selected_bg_color;//transparentize($bubble_fg_color, 0.84);
+$bubble_active_fg_color: $selected_fg_color;
 
 //insensitive state derived colors
 $insensitive_fg_color: mix($fg_color, $bg_color, 50%);
