--- a/gnome-shell/src/gnome-shell-sass/_colors.scss
+++ b/gnome-shell/src/gnome-shell-sass/_colors.scss
@@ -20,18 +20,18 @@ $error_color: #ff8080;
 $success_color: if($variant == 'light', #33d17a, darken(#33d17a, 10%));
 $destructive_color: if($variant == 'light', #e01b24, darken(#e01b24, 10%));
 
-$osd_fg_color: #eeeeec;
+$osd_fg_color: $fg_color;
 $osd_bg_color: transparentize($bg_color, 0.02);
 $osd_borders_color: transparentize(black, 0.3);
-$osd_outer_borders_color: #3d3d3d;
+$osd_outer_borders_color: if($variant=='light', transparentize(black, 0.6), #3d3d3d);
 
 $tooltip_borders_color: $osd_outer_borders_color;
 
-$bubble_bg_color: darken(white, 4%);
-$bubble_fg_color: darken(#2e3436, 6%);
-$bubble_borders_color: transparentize($bubble_fg_color, 0.75);
-$bubble_outer_borders_color: transparentize(black, 0.6);
-$bubble_hover_bg_color: transparentize($bubble_fg_color, 0.95);
+$bubble_bg_color: if($variant == 'light', darken(white, 4%), $bg_color);
+$bubble_fg_color: if($variant == 'light', darken(#2e3436, 6%), $fg_color);
+$bubble_borders_color: if($variant == 'light', transparentize($bubble_fg_color, 0.75), $borders_color);
+$bubble_outer_borders_color: $osd_outer_borders_color;
+$bubble_hover_bg_color: transparentize($bubble_fg_color, 0.94);
 $bubble_active_bg_color: $selected_bg_color;//transparentize($bubble_fg_color, 0.84);
 $bubble_active_fg_color: $selected_fg_color;
 
