--- a/gnome-shell/src/gnome-shell.scss
+++ b/gnome-shell/src/gnome-shell.scss
@@ -1,5 +1,7 @@
 $variant: 'light';
 
+@import "gnome-shell-sass/_ubuntu-colors";
 @import "gnome-shell-sass/_colors"; //use gtk colors
 @import "gnome-shell-sass/_drawing";
 @import "gnome-shell-sass/_common";
+@import "gnome-shell-sass/_dock";
