--- a/gnome-shell/src/gnome-shell-sass/_drawing.scss
+++ b/gnome-shell/src/gnome-shell-sass/_drawing.scss
@@ -40,7 +40,7 @@
 
   @if $t==normal {
     background-color: $base_color;
-    border-color: $bubble_outer_borders_color;
+    border-color: $borders_color;
 
   }
   @if $t==focus {
@@ -108,7 +108,7 @@
   }
 }
 
-@mixin button($t, $c:$osd_bg_color, $tc:$fg_color, $edge: $borders_edge) {
+@mixin button($t, $c:$bg_color, $tc:$fg_color, $edge: $borders_edge) {
 //
 // Button drawing function
 //
@@ -127,17 +127,17 @@
   $_hilight_color: _button_hilight_color($c);
   $_button_edge: if($edge == none, none, _widget_edge($edge));
   $_blank_edge: if($edge == none, none, _widget_edge(transparentize($edge,1)));
-
+  $_button_shadow: 0 1px 2px transparentize($shadow_color, 0.03);
 
   @if $t==normal {
   //
   // normal button
   //
 
-    color: if($bubble_bg_color, $tc, $osd_fg_color);
-    background-color: if($osd_bg_color or $bubble_bg_color, $c, transparentize($c, 0.5));
-    border-color: $osd_borders_color;
-    box-shadow: none;
+    color: $tc;
+    background-color: $c;
+    border-color: $borders_color;
+    box-shadow: $_button_shadow;
     text-shadow: 0 1px black;
     icon-shadow: 0 1px black;
   }
@@ -145,7 +145,7 @@
   //
   // focused button
   //  
-    color: if($bubble_bg_color, $tc, $osd_fg_color);
+    color: $tc;
     text-shadow: 0 1px black;
     icon-shadow: 0 1px black;
     box-shadow: inset 0px 0px 0px 1px $selected_bg_color;
@@ -155,24 +155,10 @@
   //
   // active osd button
   //
-    $_bg: $c;
-    $_fg: white;
-    $_bc: $osd_borders_color;
-    @if $c==$osd_bg_color {
-      $_bg: lighten($osd_bg_color,3%);
-    }
-    @else if $c==$bubble_bg_color {
-      $_bg: $bubble_hover_bg_color;
-      $_fg: $bubble_fg_color;
-      $_bc: $bubble_borders_color;
-    }
-    @else {
-      $_bg: transparentize($c, 0.3);
-    }
-    color: $_fg;
-    border-color: $_bc;
-    background-color: $_bg;
-    box-shadow: none;
+    color: $tc;
+    border-color: $borders_color;
+    background-color: $c;
+    box-shadow: $_button_shadow;
     text-shadow: 0 1px black;
     icon-shadow: 0 1px black;
 
@@ -181,24 +167,18 @@
   //
   // active osd button
   //
-    color: if($c==$bubble_bg_color, $bubble_active_fg_color, white);
-    border-color: if($c==$bubble_bg_color, $bubble_borders_color, $osd_borders_color);
-    background-color: if($c==$bubble_bg_color, $bubble_active_bg_color, $selected_bg_color);
-    // This should be none, but it's creating some issues with borders, so to
-    // workaround it for now, use inset wich goes through a different code path.
-    // see https://bugzilla.gnome.org/show_bug.cgi?id=752934
+    color: $tc;
+    border-color: $borders_color;
+    background-color: $c;
     text-shadow: none;
     icon-shadow: none;
+    box-shadow: none;
   }
   @else if $t==insensitive {
-  //
-  // insensitive osd button
-  //
-    $_bg: transparentize(mix($insensitive_fg_color,if($c==$bubble_bg_color, $bubble_bg_color, $osd_bg_color), 20%),0.3);
 
     color: $insensitive_fg_color;
-    border-color: if($c==$bubble_bg_color, $bubble_borders_color, $osd_borders_color);
-    background-color: $_bg;
+    border-color: $insensitive_borders_color;
+    background-color: $insensitive_bg_color;
     box-shadow: none;
     text-shadow: none;
     icon-shadow: none;
