--- a/gnome-shell/src/gnome-shell-sass/_common.scss
+++ b/gnome-shell/src/gnome-shell-sass/_common.scss
@@ -30,7 +30,7 @@ $medium_radius: 9px;
 
 $_trough_color: transparentize($fg_color, 0.9);
 $_bubble_borders_color: lighten($borders_color, if($variant=='light', 0%, 5%));
-$_hover_bg_color: if($variant=='light', darken($bg_color, 4%), lighten($bg_color, 3%));
+$_hover_bg_color: if($variant=='light', darken($bg_color, 5%), lighten($bg_color, 4%));
 $_active_bg_color: if($variant == 'light', darken($bg_color, 14%), darken($bg_color, 6%));
 
 $font-size: 11;
@@ -1331,7 +1331,7 @@ StScrollBar {
     border-radius: 6px;
     color: $osd_fg_color;
     background-color: $osd_bg_color;
-    border-color: transparentize($color: white, $amount: 0.7);
+    border-color: transparent;
     &:focus {
       padding: 6px 8px;
       border-width: 2px;
@@ -1563,7 +1563,7 @@ StScrollBar {
     }
   }
   .workspace-thumbnail-indicator {
-    border: 4px solid $selected_bg_color;
+    border: 2px solid $selected_bg_color;
     padding: 1px;
   }
 
