--- a/gnome-shell/src/gnome-shell-sass/_common.scss
+++ b/gnome-shell/src/gnome-shell-sass/_common.scss
@@ -30,8 +30,8 @@ $medium_radius: 9px;
 
 $_trough_color: transparentize($fg_color, 0.9);
 $_bubble_borders_color: lighten($borders_color, if($variant=='light', 0%, 5%));
-$_hover_bg_color: lighten($bg_color,if($variant=='light', 5%, 1%));
-$_active_bg_color: if($variant == 'light', darken($bg_color, 14%), darken($bg_color, 9%));
+$_hover_bg_color: transparentize(black, 0.9);
+$_active_bg_color: transparentize(black, 0.8);
 
 $font-size: 11;
 $font-family: Cantarell, Sans-Serif;
@@ -1437,13 +1437,29 @@ StScrollBar {
   }
   .app-view-control { //favorties | all toggle button
     padding: 4px 32px;
-    &:checked { @include button(active); }
+    margin: 0 4px;
+    &, &:hover, &:checked { @include button(undecorated); }
+
+    &, &:hover { color: darken($osd_fg_color, 25%); }
+
+    &:hover { box-shadow: inset 0 -2px darken($osd_fg_color, 25%); }
+
+    &:active {
+      box-shadow: inset 0 -2px $osd_fg_color;
+    }
+
+    &:checked {
+      color: $osd_fg_color;
+      box-shadow: inset 0 -2px $selected_bg_color;
+    }
+
     &:first-child {
       border-right-width: 0;
-      border-radius: 3px 0 0 3px;
+      border-radius: 0;
     }
+
     &:last-child {
-     border-radius: 0 3px 3px 0;
+     border-radius: 0;
     }
   }
 
