--- a/gnome-shell/src/gnome-shell-sass/_common.scss
+++ b/gnome-shell/src/gnome-shell-sass/_common.scss
@@ -1871,7 +1871,6 @@ StScrollBar {
   background-size: contain;
   color: $osd_fg_color;
   border-radius: 99px;
-  border: 2px solid $selected_fg_color;
   &:hover {
     color: lighten($osd_fg_color,30%);
   }
@@ -1889,15 +1888,15 @@ StScrollBar {
   border: none;
   background-color: transparent;
 
-  $_gdm_bg: #f6f5f4;
-  $_gdm_fg: #2e3436;
+  $_gdm_fg: #f6f5f4;
+  $_gdm_bg: lighten(#2e3436, 19%);
 
   StEntry {
     @extend %search_entry;
-    background-color: $_gdm_bg;
-    border-color: $_gdm_bg;
+    background-color: transparentize(lighten(desaturate(#241f31, 20%), 2%), 0.5);
+    border-color: transparentize(lighten(desaturate(#241f31, 20%), 2%), 0.5);
     border-radius: 5px;
-    color: $_gdm_fg;
+    color: $osd_fg_color;
   }
 
   .modal-dialog-button-box { spacing: 3px; }
@@ -2100,7 +2099,7 @@ $_screenshield_shadow: 0px 0px 6px rgba(0, 0, 0, 0.726);
 }
 
 #lockDialogGroup {
-  background: lighten(#2e3436, 11%) url(resource:///org/gnome/shell/theme/noise-texture.png);
+  background: lighten(#2e3436, 8%) url(resource:///org/gnome/shell/theme/noise-texture.png);
   background-repeat: repeat;
 }
 
