--- a/gnome-shell/src/gnome-shell-sass/_common.scss
+++ b/gnome-shell/src/gnome-shell-sass/_common.scss
@@ -1222,6 +1222,15 @@ StScrollBar {
   border: 1px solid $selected_bg_color;
 }
 
+// Pointer location
+.ripple-pointer-location {
+  width: 50px;
+  height: 50px;
+  border-radius: 25px 25px 25px 25px; // radius the size of the box give us the curve
+  background-color: lighten(transparentize($selected_bg_color, 0.7), 30%);
+  box-shadow: 0 0 2px 2px lighten($selected_bg_color, 20%);
+}
+
 // not really top bar only
 .popup-menu-arrow { icon-size: 1.09em; }
 .popup-menu-icon { icon-size: 1.09em; }
@@ -1247,6 +1256,15 @@ StScrollBar {
     background-color: darken($selected_bg_color, 5%);
     border-color: darken($selected_bg_color, 5%);
   }
+}
+
+// Pointer accessibility notifications
+.pie-timer {
+  width: 60px;
+  height: 60px;
+  -pie-border-width: 3px;
+  -pie-border-color: $selected_bg_color;
+  -pie-background-color: lighten(transparentize($selected_bg_color, 0.7), 40%);
 }
 
 /* NETWORK DIALOGS */
@@ -1485,8 +1503,7 @@ StScrollBar {
     }
     &:active .overview-icon,
     &:checked .overview-icon {
-      background-color: transparentize(darken($osd_bg_color,10%),.1);
-      box-shadow: inset 0 1px 2px $osd_borders_color;
+      background-color: transparentize(darken($osd_bg_color,10%), 0.5);
     }
     &:hover .overview-icon,
     &:focus .overview-icon,
@@ -1507,7 +1524,7 @@ StScrollBar {
 
   %icon_tile {
     color: $osd_fg_color;
-    border-radius: 4px;
+    border-radius: $medium_radius;
     padding: 6px;
     border: 1px solid transparent;
     transition-duration: 100ms;
@@ -1528,7 +1545,7 @@ StScrollBar {
   // Collections
   .app-folder-popup { //expanded collection
     -arrow-border-radius: 8px;
-    -arrow-background-color: transparentize($osd_bg_color,0.7);
+    -arrow-background-color: transparentize(darken($osd_bg_color,10%), 0.5);
     -arrow-base: 24px;
     -arrow-rise: 11px;
   }
